# personal_website

./: .env.example  .env.production.example  .gitignore  README.md  app.py  check_versions.py  direct_github.py  gunicorn_config.py  main.py  pyproject.toml  render.yaml  requirements.txt  setup.sh  start_app.sh  test_github_api.py  wsgi.py
app/: __init__.py  github_api.py  resume_utils.py  routes.py
app/data/: resume_data.yaml
app/static/js/: chatbot.js  dashboard.js  language_chart.js  resume.js
app/templates/: about.html  base.html  dashboard.html  dashboard_old.html  fresh_languages.html  github_languages.html  index.html  projects.html  resume.html  test_chart.html
scripts/: start_local.sh
tests/: __init__.py  test_github_api.py  test_routes.py
